# sentry-bot

./: .eslintrc.yml  .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  build_frontend.sh  mdl_style.rb  mypy.ini  pyproject.toml  test_backend.sh  test_frontend.sh
.github/workflows/: jest.yml  pre-commit.yml  pytest.yml  unittests.yml
frontend/: README.md  append_js.sh  face_detection.ts  hello.ts  mouse.ts  package-lock.json  package.json  sum.test.ts  sum.ts  tsconfig.build.json  tsconfig.json
frontend/src/: face_detection.ts  hearts.ts  mouse.ts  offload_detection.ts  send_receive.ts
sentrybot/: __init__.py  app.py  client_instruction.py  haar_aiming.py  hsv_aiming.py  hsv_config.sh  http_server.py  package-lock.json  settings.py  turret_controller.py  video.py  video_opencv.py  video_picamera.py
sentrybot/static/css/: mycss.css  sentrybot.css
sentrybot/static/js/: face_detection.js  handle_coords.js  hello.js  mouse.js  offload_detection.js  send_receive.js  sum.js  sum.test.js
sentrybot/templates/: base.html  face_detection.html  game.html  index.html  mask.html  movable_camera.html  offload.html  send_receive.html  simpleserver.html  video.html
stubs/cv2/: __init__.pyi
stubs/gpiozero/: __init__.pyi
stubs/gpiozero/pins/: pi.pyi
tests/: test_app.py  test_haar_aiming.py  test_sentrybot.py  test_server.py  test_settings.py  test_turret_controller.py
