[tool.poetry]
name = "sentrybot"
version = "0.1.0"
description = ""
authors = ["Iain <25081046+Iain-S@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
toml = "^0.10.2"
opencv-python = {version = "^4.6.0", optional = true}
picamera = {version = "^1.13", optional = true}
gpiozero = "^1.6.2"
pigpio = "^1.78"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
isort = "^5.10.1"
pylint = "^2.15.3"
mypy = "^0.982"
types-toml = "^0.10.8"
pytest-cov = "^4.0.0"

[tool.poetry.extras]
picamera = ["picamera"]
opencv = ["opencv-python"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
