[tool.poetry]
name = "sentrybot"
version = "0.1.0"
description = ""
authors = ["Iain <25081046+Iain-S@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
toml = "^0.10.2"
opencv-python = "^4.6.0"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
isort = "^5.10.1"
pylint = "^2.15.2"
mypy = "^0.982"
types-toml = "^0.10.8"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
