[tool.poetry]
name = "sentrybot"
version = "0.1.0"
description = ""
authors = ["Iain <25081046+Iain-S@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
isort = "^5.10.1"
pylint = "^2.15.2"
mypy = "^0.982"
types-toml = "^0.10.8"
pytest-cov = "^3.0.0"

[tool.poetry.group.picamera.dependencies]
picamera = {version = "^1.13", extras = ["picamera"]}

[tool.poetry.group.opencv.dependencies]
opencv-python = {version = "^4.6.0", extras = ["opencv"]}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
